# mouse-dynamics

./: .gitignore  LICENSE  README.md  dataset-metadata.json  gan.ipynb  initial_test.ipynb  many_random_forest.py  pyproject.toml  teste.py
.github/workflows/: kaggle-sync.yml
analysis/: balabit_khan.py  bogazici.py  khan.py  main.py  minecraft.py  necessary.py
best-parameters/balabit/: knn_balabit__user12.db  knn_balabit__user15.db  knn_balabit__user16.db  knn_balabit__user20.db  knn_balabit__user21.db  knn_balabit__user23.db  knn_balabit__user29.db  knn_balabit__user35.db  knn_balabit__user7.db  knn_balabit__user9.db  mlp_balabit__user12.db  mlp_balabit__user15.db  mlp_balabit__user16.db  mlp_balabit__user20.db  mlp_balabit__user21.db  mlp_balabit__user23.db  mlp_balabit__user29.db  mlp_balabit__user35.db  mlp_balabit__user7.db  mlp_balabit__user9.db  random-forest_balabit__user12.db  random-forest_balabit__user15.db  random-forest_balabit__user16.db  random-forest_balabit__user20.db  random-forest_balabit__user21.db  random-forest_balabit__user23.db  random-forest_balabit__user29.db  random-forest_balabit__user35.db  random-forest_balabit__user7.db  random-forest_balabit__user9.db  random-forest_balabit__user_21.db  random-forest_balabit__user_9.db
best-parameters/bogazici/: knn_bogazici__user1.db  knn_bogazici__user10.db  knn_bogazici__user11.db  knn_bogazici__user12.db  knn_bogazici__user13.db  knn_bogazici__user14.db  knn_bogazici__user15.db  knn_bogazici__user16.db  knn_bogazici__user17.db  knn_bogazici__user18.db  knn_bogazici__user19.db  knn_bogazici__user2.db  knn_bogazici__user3.db  knn_bogazici__user4.db  knn_bogazici__user5.db  knn_bogazici__user6.db  knn_bogazici__user7.db  knn_bogazici__user8.db  knn_bogazici__user9.db  mlp_bogazici__user1.db  mlp_bogazici__user10.db  mlp_bogazici__user11.db  mlp_bogazici__user12.db  mlp_bogazici__user13.db  mlp_bogazici__user14.db  mlp_bogazici__user15.db  mlp_bogazici__user16.db  mlp_bogazici__user17.db  mlp_bogazici__user18.db  mlp_bogazici__user19.db  mlp_bogazici__user2.db  mlp_bogazici__user3.db  mlp_bogazici__user4.db  mlp_bogazici__user5.db  (+23 more)
notebooks/: balabit_metadata.json  bogazici.ipynb  bogazici_metadata.json  minecraft_metadata.json
random_tree/: filter_test.py  filter_training.py  many_random_forest.py  train_random_forest.py
src/: orchestrator.py
(+232 files in other folders)
