[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-dynamics"
version = "0.1.0"
description = "Machine Learning framework for mouse dynamics behavioral biometrics"
readme = "README.md"
authors = [
    {name = "Matheus Foresto Moselli", email = "m.moselli@aluno.ufabc.edu.br"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = [
    "machine-learning",
    "biometrics",
    "mouse-dynamics",
    "authentication",
    "security"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
md-extract = "scripts.extract_features:main"
md-train = "scripts.train_model:main"
md-evaluate = "scripts.evaluate_model:main"
md-experiment = "scripts.run_experiment:main"

[project.urls]
Homepage = "https://github.com/MatheusMoselli/mouse-dynamics"
Repository = "https://github.com/MatheusMoselli/mouse-dynamics"
"Bug Tracker" = "https://github.com/MatheusMoselli/mouse-dynamics/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "notebooks*", "scripts*", "data*", "experiments*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

dependencies = [
    "pandas~=2.2.3",
    "scikit-learn~=1.6.1"
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | data
  | experiments
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true